--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -20,8 +20,8 @@ body {
 	padding: 0;
 	font-weight: normal;
 	font-family: 'Roboto', sans-serif;
-	background: lime;
-	color: red;
+	background: $bg-color;
+	color: $text-color;
 }
 button {
 	border: none;
