--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,11 @@
 /*Header*/
 .header {
+	position: sticky;
+	top: 0;
+	left: 0;
+	right: 0;
 	width: 100%;
+	z-index: 10;
 	.header-top {
 		width: 100%;
 		height: 35px;
@@ -8,7 +13,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		@include text(1.1rem, 600, $grey-color);
+		@include text(1rem, 500, $grey-color);
 		i {
 			margin-right: 10px;
 		}
@@ -92,7 +97,7 @@
 						border-radius: 4px;
 						transition: 300ms;
 						display: none;
-						z-index: 100;
+						z-index: 10;
 						.auth-dropdown-list {
 							width: 100%;
 							height: 35px;
@@ -147,6 +152,7 @@
 			overflow-y: auto;
 			transform: translateX(100%);
 			transition: 0.65s;
+			z-index: 1000;
 			.menu-link {
 				@include text($fs-md-3, 500, $grey-color);
 			}
