--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './base/reset.scss';
 /*components*/
 @import './components/buttons.scss';
+@import './components/carousel';
 /*layout*/
 @import './layout/header.scss';
 @import './layout/footer.scss';
