--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 /*layout*/
 @import './layout/header.scss';
 @import './layout/footer.scss';
+@import './layout/forms.scss';
 /*pages*/
 @import './pages/home.scss';
 /*vendors*/
