--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,17 +1,47 @@
 .carousel {
-  height: calc(100vh - 100px);
-  @media (max-width: 600px) {
-    height: calc(100vh - 350px);
-  }
+  height: calc(100vh - 200px);
 }
 
-.carousel-item2,
-.carousel-link {
+.carousel-item2 {
   height: 100% !important;
   width: 100%;
 }
 
 .carousel-inner {
-  position: relative;
   height: 100%;
+}
+.carousel-link {
+  max-width: 100%;
+  height: auto;
+  // background-image: url('../../public/compressed.jpg');
+  // background-size: cover;
+  // background-position: center;
+}
+
+.carousel-img-wrapper {
+  width: 100%;
+  height: 700px;
+}
+.carousel-img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media only screen and (max-device-width: 768px) {
+  .carousel-link {
+    height: 500px;
+  }
+}
+@media only screen and (max-device-width: 475px) {
+  .carousel-item2 {
+    height: 60% !important;
+    width: 100%;
+  }
+  .carousel-img-wrapper {
+    height: 300px;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 60%;
+  }
 }
