--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,9 @@
 @import './base/reset.scss';
 /*components*/
 @import './components/buttons.scss';
-@import './components/carousel';
+@import './components/carousel.scss';
+@import './components/featured.scss';
+@import './components/slogan.scss';
 /*layout*/
 @import './layout/header.scss';
 @import './layout/footer.scss';
