--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,5 +15,6 @@
 @import './layout/forms.scss';
 /*pages*/
 @import './pages/home.scss';
+@import './pages/products.scss';
 /*vendors*/
 @import './vendors/bootstrap.scss';
