product detail is created

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,5 +16,6 @@
 /*pages*/
 @import './pages/home.scss';
 @import './pages/products.scss';
+@import './pages/product-detail.scss';
 /*vendors*/
 @import './vendors/bootstrap.scss';
