cart page is created

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,5 +17,6 @@
 @import './pages/home.scss';
 @import './pages/products.scss';
 @import './pages/product-detail.scss';
+@import './pages/cart.scss';
 /*vendors*/
 @import './vendors/bootstrap.scss';
