verify-email page is done, working on /giris

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,5 +18,6 @@
 @import './pages/products.scss';
 @import './pages/product-detail.scss';
 @import './pages/cart.scss';
+@import './pages/verify-email.scss';
 /*vendors*/
 @import './vendors/bootstrap.scss';
