addressed an issue of clientside session now works

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,5 +19,6 @@
 @import './pages/product-detail.scss';
 @import './pages/cart.scss';
 @import './pages/verify-email.scss';
+@import './pages/email-sent.scss';
 /*vendors*/
 @import './vendors/bootstrap.scss';
