--- a/scss/pages/_email-sent.scss
+++ b/scss/pages/_email-sent.scss
@@ -1,13 +1,13 @@
 @use '../abstracts/variables';
 
-.verify-wrapper {
+.email-wrapper {
   width: 100%;
   height: calc(100vh - 150px);
   display: flex;
   justify-content: center;
   align-items: center;
 
-  .verify {
+  .email {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -19,59 +19,39 @@
     transition: 300ms;
     border: 1px solid rgba($color: $primary-color, $alpha: 0.2);
     box-shadow: 25px 50px 50px -45px #f55951;
-    border: 1px solid red;
 
-    .verify-img {
+    .email-img {
       width: 10rem;
       padding: 0;
       margin-bottom: 1rem;
     }
-    .verify-typography {
+    .email-typography {
       width: 100%;
       h3 {
-        margin-bottom: 1rem;
+        margin: 1.5rem 0;
       }
       p {
         @include text(0.8rem, 400, $text-color);
-        margin-bottom: 3rem;
-      }
-      a {
-        text-decoration: none;
-        padding: 1rem 5rem;
-        border-radius: 5px;
-        background-color: $primary-color;
-        transition: 300ms;
-        @include text(1rem, 700, $bg-color);
-        &:hover {
-          opacity: 0.85;
-        }
+        margin: 1rem 0;
       }
     }
   }
 }
 
 @media screen and (max-width: 500px) {
-  .verify-wrapper {
-    .verify {
+  .email-wrapper {
+    .email {
       width: 75%;
       padding: 3rem 1.5rem;
 
-      .verify-img {
+      .email-img {
         width: 5rem;
       }
-      .verify-typography {
+      .email-typography {
         width: 100%;
         p {
           @include text(0.7rem, 400, $text-color);
           margin-bottom: 2rem;
-        }
-        a {
-          padding: 0.7rem 3rem;
-          transition: 300ms;
-          @include text(0.9rem, 700, $bg-color);
-          &:hover {
-            opacity: 0.85;
-          }
         }
       }
     }
